--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LightCitySMP Leaderboards</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Cinzel:wght@700;800&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --bg-main: #0b0f19;
@@ -12,7 +12,6 @@
       --bg-hover: #1e2638;
       --text-main: #ffffff;
       --text-muted: #8b949e;
-      --accent-primary: #3b82f6;
       --accent-skill: #eab308;
       --accent-kills: #ef4444;
       --accent-deaths: #a855f7;
@@ -50,14 +49,13 @@
     }
 
     .title {
-      font-size: 32px;
-      font-weight: 700;
-      color: var(--text-main);
-      letter-spacing: 1px;
-    }
-
-    .title span {
-      color: var(--accent-primary);
+      font-family: 'Cinzel', serif;
+      font-size: 38px;
+      font-weight: 800;
+      color: #FFD700;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      text-shadow: 0 0 15px rgba(255, 215, 0, 0.15);
     }
 
     .subtitle {
@@ -66,6 +64,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       font-weight: 500;
+      margin-top: 2px;
     }
 
     .header-stats {
@@ -94,30 +93,6 @@
       color: var(--text-muted);
       text-transform: uppercase;
       letter-spacing: 1px;
-    }
-
-    .status-live {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      color: var(--accent-playtime);
-      font-weight: 500;
-      font-size: 14px;
-      margin-bottom: 5px;
-    }
-
-    .pulse {
-      width: 10px;
-      height: 10px;
-      background-color: var(--accent-playtime);
-      border-radius: 50%;
-      animation: pulse-animation 2s infinite;
-    }
-
-    @keyframes pulse-animation {
-      0% { box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7); }
-      70% { box-shadow: 0 0 0 10px rgba(34, 197, 94, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(34, 197, 94, 0); }
     }
 
     nav {
@@ -251,7 +226,7 @@
       color: var(--text-muted);
     }
 
-    .rank-1 { color: #fbbf24; font-size: 28px; }
+    .rank-1 { color: #FFD700; font-size: 28px; }
     .rank-2 { color: #9ca3af; font-size: 26px; }
     .rank-3 { color: #b45309; font-size: 26px; }
 
@@ -354,7 +329,7 @@
       }
       .header-stats {
         width: 100%;
-        justify-content: space-between;
+        justify-content: center;
       }
       .progress-col {
         display: none;
@@ -369,14 +344,10 @@
 
 <header>
   <div class="header-brand">
-    <div class="title">Light<span>City</span>SMP</div>
+    <div class="title">LightCitySMP</div>
     <div class="subtitle">Season 4 Official Leaderboards</div>
   </div>
   <div class="header-stats">
-    <div class="stat-box">
-      <div class="status-live"><div class="pulse"></div>Soon</div>
-      <div class="stat-label">Server Status</div>
-    </div>
     <div class="stat-box">
       <div class="stat-value">—</div>
       <div class="stat-label">Online</div>
