--- a/index.html
+++ b/index.html
@@ -20,74 +20,179 @@
     }
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { background-color: var(--bg-main); color: var(--text-main); font-family: 'Poppins', sans-serif; min-height: 100vh; overflow-x: hidden; }
+    body { 
+      background-color: var(--bg-main); 
+      color: var(--text-main); 
+      font-family: 'Poppins', sans-serif; 
+      min-height: 100vh; 
+      overflow-x: hidden; 
+    }
 
     header {
       background-color: var(--bg-card);
       border-bottom: 1px solid var(--border-color);
-      padding: 30px 40px;
+      padding: 40px 20px;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
+      box-shadow: 0 4px 25px rgba(0, 0, 0, 0.4);
     }
 
     .title {
       font-family: 'Cinzel', serif;
-      font-size: 42px;
+      font-size: 48px;
       font-weight: 800;
       color: #FFD700;
-      letter-spacing: 3px;
+      letter-spacing: 4px;
       text-transform: uppercase;
+      text-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
     }
 
-    .subtitle { font-size: 14px; color: var(--text-muted); text-transform: uppercase; letter-spacing: 4px; margin-top: 5px; }
+    .subtitle { 
+      font-size: 13px; 
+      color: var(--text-muted); 
+      text-transform: uppercase; 
+      letter-spacing: 5px; 
+      font-weight: 500; 
+      margin-top: 8px; 
+    }
 
-    .search-container { margin-top: 20px; width: 100%; max-width: 400px; }
+    .search-container {
+      margin-top: 25px;
+      width: 100%;
+      max-width: 450px;
+    }
+
     .search-input {
       width: 100%;
-      background: var(--bg-main);
+      background: rgba(0,0,0,0.2);
       border: 1px solid var(--border-color);
-      padding: 12px 20px;
-      border-radius: 8px;
+      padding: 14px 22px;
+      border-radius: 12px;
       color: white;
+      font-family: 'Poppins', sans-serif;
       outline: none;
+      transition: all 0.3s ease;
     }
 
-    nav { display: flex; justify-content: center; gap: 15px; padding: 30px 20px; }
+    .search-input:focus { 
+      border-color: #FFD700; 
+      box-shadow: 0 0 15px rgba(255, 215, 0, 0.1);
+    }
+
+    nav { 
+      display: flex; 
+      justify-content: center; 
+      gap: 12px; 
+      padding: 30px 20px; 
+      background: linear-gradient(180deg, var(--bg-card) 0%, var(--bg-main) 100%);
+      flex-wrap: wrap;
+    }
+
     .nav-btn {
       background-color: var(--bg-card);
       color: var(--text-muted);
       border: 1px solid var(--border-color);
-      padding: 12px 24px;
-      border-radius: 8px;
+      padding: 12px 28px;
+      border-radius: 10px;
+      font-family: 'Poppins', sans-serif;
+      font-size: 14px;
       font-weight: 600;
       cursor: pointer;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .nav-btn.active[data-target="skill"] { background-color: var(--accent-skill); color: #000; }
-    .nav-btn.active[data-target="kills"] { background-color: var(--accent-kills); color: #fff; }
-    .nav-btn.active[data-target="deaths"] { background-color: var(--accent-deaths); color: #fff; }
-    .nav-btn.active[data-target="playtime"] { background-color: var(--accent-playtime); color: #000; }
 
-    main { max-width: 1100px; margin: 0 auto; padding: 20px; }
-    .leaderboard-section { display: none; }
+    .nav-btn:hover {
+      transform: translateY(-3px);
+      color: white;
+      border-color: var(--text-muted);
+    }
+
+    .nav-btn.active[data-target="skill"] { background-color: var(--accent-skill); color: #000; border-color: var(--accent-skill); }
+    .nav-btn.active[data-target="kills"] { background-color: var(--accent-kills); color: #fff; border-color: var(--accent-kills); }
+    .nav-btn.active[data-target="deaths"] { background-color: var(--accent-deaths); color: #fff; border-color: var(--accent-deaths); }
+    .nav-btn.active[data-target="playtime"] { background-color: var(--accent-playtime); color: #000; border-color: var(--accent-playtime); }
+
+    main { max-width: 1100px; margin: 0 auto; padding: 20px 20px 80px; }
+
+    .leaderboard-section { 
+      display: none; 
+      animation: riseFade 0.5s ease-out forwards; 
+    }
+
     .leaderboard-section.active { display: block; }
 
-    .leaderboard-table { width: 100%; border-collapse: separate; border-spacing: 0 8px; }
-    .leaderboard-table tr.player-row { background-color: var(--bg-card); }
-    .leaderboard-table tr.hidden { display: none; }
-    .leaderboard-table td { padding: 15px 20px; }
-    
-    .rank-col { width: 80px; font-size: 24px; font-weight: 700; color: #FFD700; }
-    .player-info { display: flex; align-items: center; gap: 15px; }
-    .player-avatar { width: 40px; height: 40px; border-radius: 4px; overflow: hidden; }
-    .player-avatar img { width: 100%; height: 100%; }
-    .score-col { text-align: right; font-size: 24px; font-weight: 700; }
+    @keyframes riseFade {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
+    .section-header { margin-bottom: 30px; padding-bottom: 15px; border-bottom: 1px solid var(--border-color); }
+    .section-title { font-size: 34px; font-weight: 700; }
+
+    .leaderboard-table { width: 100%; border-collapse: separate; border-spacing: 0 10px; }
+    .leaderboard-table th { 
+      text-align: left; 
+      color: var(--text-muted); 
+      font-size: 11px; 
+      text-transform: uppercase; 
+      letter-spacing: 2px;
+      padding: 0 20px 10px; 
+    }
+
+    .player-row { 
+      background-color: var(--bg-card); 
+      transition: all 0.3s ease;
+      cursor: default;
+    }
+
+    .player-row:hover { 
+      background-color: var(--bg-hover); 
+      transform: scale(1.02);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+
+    .player-row.hidden { display: none; }
+    .player-row td { padding: 18px 20px; }
+    .player-row td:first-child { border-top-left-radius: 12px; border-bottom-left-radius: 12px; }
+    .player-row td:last-child { border-top-right-radius: 12px; border-bottom-right-radius: 12px; }
+
+    .rank-col { width: 80px; font-size: 26px; font-weight: 800; color: var(--text-muted); }
+    .rank-1 { color: #FFD700; }
+    .rank-2 { color: #C0C0C0; }
+    .rank-3 { color: #CD7F32; }
+
+    .player-info { display: flex; align-items: center; gap: 18px; }
+    .player-avatar { 
+      width: 44px; 
+      height: 44px; 
+      border-radius: 8px; 
+      overflow: hidden; 
+      background: #000; 
+      border: 2px solid rgba(255,215,0,0.1);
+    }
+    .player-avatar img { width: 100%; height: 100%; image-rendering: pixelated; }
+    .player-name { font-size: 17px; font-weight: 600; color: var(--text-main); }
+
+    .progress-col { width: 25%; }
+    .progress-bg { background: var(--bg-main); height: 6px; border-radius: 10px; overflow: hidden; }
+    .progress-bar { height: 100%; border-radius: 10px; transition: width 1s ease-in-out; }
+
+    .score-col { text-align: right; font-size: 26px; font-weight: 800; width: 150px; }
     .color-skill { color: var(--accent-skill); }
     .color-kills { color: var(--accent-kills); }
     .color-deaths { color: var(--accent-deaths); }
     .color-playtime { color: var(--accent-playtime); }
+
+    footer { 
+      text-align: center; 
+      padding: 50px; 
+      color: var(--text-muted); 
+      font-size: 13px; 
+      letter-spacing: 1px;
+      border-top: 1px solid var(--border-color); 
+    }
   </style>
 </head>
 <body>
@@ -96,7 +201,7 @@
   <div class="title">LightCitySMP</div>
   <div class="subtitle">Season 4 Leaderboards</div>
   <div class="search-container">
-    <input type="text" id="playerSearch" class="search-input" placeholder="Search for a player...">
+    <input type="text" id="playerSearch" class="search-input" placeholder="Find a legend...">
   </div>
 </header>
 
@@ -108,11 +213,25 @@
 </nav>
 
 <main>
-  <section class="leaderboard-section active" id="view-skill"><div id="content-skill"></div></section>
-  <section class="leaderboard-section" id="view-kills"><div id="content-kills"></div></section>
-  <section class="leaderboard-section" id="view-deaths"><div id="content-deaths"></div></section>
-  <section class="leaderboard-section" id="view-playtime"><div id="content-playtime"></div></section>
+  <section class="leaderboard-section active" id="view-skill">
+    <div class="section-header"><div class="section-title color-skill">Top Skill</div></div>
+    <div id="content-skill"></div>
+  </section>
+  <section class="leaderboard-section" id="view-kills">
+    <div class="section-header"><div class="section-title color-kills">Slayers</div></div>
+    <div id="content-kills"></div>
+  </section>
+  <section class="leaderboard-section" id="view-deaths">
+    <div class="section-header"><div class="section-title color-deaths">Total Deaths</div></div>
+    <div id="content-deaths"></div>
+  </section>
+  <section class="leaderboard-section" id="view-playtime">
+    <div class="section-header"><div class="section-title color-playtime">Longest Playtime</div></div>
+    <div id="content-playtime"></div>
+  </section>
 </main>
+
+<footer>LightCitySMP &copy; 2026 &bull; Season 4 Official</footer>
 
 <script>
   const buttons = document.querySelectorAll('.nav-btn');
@@ -148,15 +267,19 @@
   }
 
   function render(id, list, theme, label, key) {
-    let html = `<table class="leaderboard-table"><tbody>`;
+    const max = list.length > 0 ? list[0][key] : 1;
+    let html = `<table class="leaderboard-table"><thead><tr><th>#</th><th>Player</th><th></th><th style="text-align:right">${label}</th></tr></thead><tbody>`;
     list.forEach((p, i) => {
+      const rCls = i === 0 ? 'rank-1' : i === 1 ? 'rank-2' : i === 2 ? 'rank-3' : '';
+      const pct = Math.round((p[key] / (max || 1)) * 100);
       html += `<tr class="player-row" data-name="${p.username}">
-        <td class="rank-col">#${i+1}</td>
+        <td class="rank-col ${rCls}">#${i+1}</td>
         <td><div class="player-info">
           <div class="player-avatar"><img src="https://mc-heads.net/avatar/${p.username}/44" onerror="this.src='https://mc-heads.net/avatar/steve/44'"></div>
           <div class="player-name">${p.username}</div>
         </div></td>
-        <td class="score-col color-${theme}">${p[key]}</td>
+        <td class="progress-col"><div class="progress-bg"><div class="progress-bar color-${theme}" style="width:${pct}%; background-color: var(--accent-${theme})"></div></div></td>
+        <td class="score-col color-${theme}">${p[key].toLocaleString()}</td>
       </tr>`;
     });
     document.getElementById(id).innerHTML = html + `</tbody></table>`;
